--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "flowbite": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sqlite3": "^5.1.7",
     "tailwindcss": "^4.0.15",
     "xlsx": "^0.18.5"
   },
@@ -29,5 +33,18 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^6.2.2"
-  }
+  },
+  "description": "Este projeto implementa uma tabela com funcionalidades de filtro, incluindo um filtro de busca e um dropdown para selecionar intervalos de datas. A interface foi projetada para ser simples e responsiva, permitindo que o usuário visualize e filtre dados com facilidade.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fabriciogama26/FM_Controle.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/fabriciogama26/FM_Controle/issues"
+  },
+  "homepage": "https://github.com/fabriciogama26/FM_Controle#readme"
 }
